Add managed port-forwarding and CDK plugin APIs
